scrollbar fix

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,12 +27,35 @@ body {
   /* border: 2px solid red; */
 }
 
-body, html {
+
+
+
+/*24.11.2023 scrollbalken entfernt*/
+/* Webkit-basierte Browser (Chrome, Safari) */
+body::-webkit-scrollbar {
+  width: 0px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+
+
+
+
+body,
+html {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
 }
+
 
 a{
   text-transform: none;
@@ -42,7 +65,7 @@ a{
 
 #root {
   max-width: 1280px;
-  /* margin: 0 auto; */
+  margin: 0 auto;
   margin:0;
   padding: 0;
   text-align: center;
@@ -187,7 +210,6 @@ a{
     --inset-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
 
 }
-
 
 /* .App {
   min-width: 100vw;
